new file:   discord-bot/commands/run.js 	modified:   discord-bot/config.json

--- a/discord-bot/config.json
+++ b/discord-bot/config.json
@@ -1,5 +1,4 @@
 {
-    "clientID": "clientID",
-    "guildID": "guildID",
-    "token": "token"
+    "clientID": "910260518269362177",
+    "token": "OTEwMjYwNTE4MjY5MzYyMTc3.YZQQKw.ESVDoPcH3Q_X30uo3OXze5gtWHw"
 }
