--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
     "name": "micdolands",
     "description": "micdolands is a personal use bot.",
     "dependencies": {
-        "discord.js": "^13.5.0",
+        "@discordjs/builders": "^0.11.0",
         "@discordjs/rest": "^0.2.0-canary.0",
-        "dotenv": "^10.0.0"
+        "discord": "^0.8.2",
+        "discord-api-types": "^0.26.1",
+        "discord.js": "^13.6.0",
+        "dotenv": "^10.0.0",
+        "package.json": "^2.0.1"
     },
     "repository": {
         "type": "git",
         "url": "https://github.com/limetreemain/irabot"
     },
-    "keywords": ["personal", "general use bot", "discord bot"],
+    "keywords": [
+        "personal",
+        "general use bot",
+        "discord bot"
+    ],
     "author": "limetree",
     "license": "MIT",
     "bugs": {
